--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 *{margin: 0;
     padding: 0;}
    
+
     header{
         background-color: rgb(51, 255, 0);
         color: white;
         display: flex;
         justify-content: space-around;
         padding: 24px 0;
-   
     }
+    
+.cabecalho-listra-item{
+display: inline;
+}
