--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
         color: white;
         display: flex;
         justify-content: space-around;
-        padding: 24px;
+        padding: 24px 0;
 
     }
 .cabecalho-listra-item{
