--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{margin: 0;
+*{margin:  0;
     padding: 0;}
    
 
@@ -14,4 +14,5 @@
         display: inline-block;
         margin: 0 20px;
         padding: 10px 0;
+        font-size: 24px;
 }
