--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
    
 
     header{
-        background-color: aqua;
+        background-color: rgb(245, 37, 9);
         color: white;
         display: flex;
         justify-content: space-around;
