--- a/style.css
+++ b/style.css
@@ -20,3 +20,7 @@
 .imagem-escola{
         width: 25%;
 }
+.escola{
+
+  background-image: linear-gradient(rgba(68, 58, 206, 0.932),rgba(128, 15, 194, 0.863));      
+}
