--- a/style.css
+++ b/style.css
@@ -22,5 +22,7 @@
 }
 .escola{
 
-  background-image: linear-gradient(rgba(68, 58, 206, 0.932),rgba(128, 15, 194, 0.863));      
+  background-image: linear-gradient(rgba(68, 58, 206, 0.932),rgba(128, 15, 194, 0.863);
+  color: aqua;
+  display: flex;
 }
