--- a/style.css
+++ b/style.css
@@ -31,3 +31,40 @@
 padding: 20px;
 
 }
+.texto-escola{font-size: 20px;}
+
+.escola-conteudo{
+    width: 40%;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.titulo-escola{
+    padding: 20px;
+}
+
+.imagem-escola{margin: 40px;}
+
+.estudante{
+    background-image: linear-gradient(rgb(106, 6, 64), rgb(64, 6, 40));
+    color: white;
+
+}
+
+.estudante-imagem{
+    width: 120px;
+}
+
+.estudante-icone{
+    width: 20px;
+}
+
+.estudante-titulo{
+    text-align: center;
+}
+
+.estudante-div{
+    text-align: center;
+    padding: 50px 0;
+
+}
